--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neon Tech - Custom PC Builders</title>
+    <link rel="stylesheet" href="dist/assets/main-CubdCKuS.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src=dist/assets/main-Bwkl81a7.js"></script>
+    <script type="module" src="dist/assets/main-BwkI81a7.js"></script>
   </body>
 </html>
